# ECHO

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
models/: __init__.py  adgn.py  drew_delay.py  flat_nsd.py  gnn.py  graphcon.py  grit_layer.py  matrix_parametrizations.py  phdgn.py  phdgn_utils.py  swan.py
notebooks/: make-predictions.ipynb  train-model.ipynb
scripts/: download-all.py  run_diam.sh  run_search.sh  run_serach.slurm  search.py  train.py
search-space/charge/: drew_gp.yaml  flatnsd_gp.yaml  gin_gp.yaml  graphcon_gp.yaml  grit_gp.yaml  phdgn_gp.yaml
search-space/chem/: adgn_gp.yaml  gcn2_gp.yaml  gcn_gp.yaml  gine_gp.yaml  gps_gp.yaml  swan_gp.yaml
search-space/diam/: adgn_gp.yaml  drew_gp.yaml  flatnsd_gp.yaml  gcn2_gp.yaml  gcn_gp.yaml  gin_gp.yaml  gps_gp.yaml  graphcon_gp.yaml  grit_gp.yaml  phdgn_gp.yaml  swan_gp.yaml
search-space/ecc/: adgn_gp.yaml  drew_gp.yaml  flatnsd_gp.yaml  gcn2_gp.yaml  gcn_gp.yaml  gin_gp.yaml  gps_gp.yaml  graphcon_gp.yaml  grit_gp.yaml  phdgn_gp.yaml  swan_gp.yaml
search-space/energy/: adgn_gp.yaml  drew_gp.yaml  gcn2_gp.yaml  gcn_gp.yaml  gin_gp.yaml  gine_gp.yaml  gps_gp.yaml  graphcon_gp.yaml  grit_gp.yaml  phdgn_gp.yaml  swan_gp.yaml
search-space/sssp/: adgn_gp.yaml  drew_gp.yaml  flatnsd_gp.yaml  gcn2_gp.yaml  gcn_gp.yaml  gin_gp.yaml  gps_gp.yaml  graphcon_gp.yaml  grit_gp.yaml  phdgn_gp.yaml  swan_gp.yaml
utils/: __init__.py  echo_dataset.py  litmodels.py
